Styling and initial calculator functionality with screen

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,8 @@
-.App {
+@import url('https://fonts.googleapis.com/css?family=Mukta');
+
+/* .App {
   text-align: center;
-}
+} */
 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
@@ -25,4 +27,8 @@
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
+}
+
+h1 {
+  margin: 0px;
 }
