--- a/src/Components/ResultsSection/ResultsSection.css
+++ b/src/Components/ResultsSection/ResultsSection.css
@@ -15,13 +15,20 @@
     background: rgb(240,248,255);
     margin: 0 auto;
     display: flex;
-    justify-content: center;
+    /* justify-content: center; */
     flex-direction: column;
-    align-items: center;
+    /* align-items: center; */
     overflow: auto;
 }
 .resultsMain>h1 {
     text-align: center;
     font-size: 30px;
     text-shadow: 1px 1px 1px white;
+}
+.resultsDialogue>p {
+    font-family: 'Share Tech Mono', monospace;
+    font-size: 20px;
+    margin-top: 1px;
+    margin-bottom: 0px;
+    margin-left: 10px;
 }
